[CPDLP-3046] Add accept applications endpoint (#1368)
* [CPDLP-3046] Add accept applications endpoint

* [CPDLP-3046] Address PR comments

* [CPDLP-3048] Add change funding application endpoint

* [CPDLP-3048] Address PR comments

* [CPDLP-3049] TS4 - Add swagger docs for all three new action endpoints in all versions

* [CPDLP-3049] Add more api docs specs

* [CPDLP-3049] Address PR comments

* [CPDLP-3046] Address PR comments

---------
